--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <div class="bnr-announcement">
                         <span>Limited-Time Offer: Exclusive Quotes Available until March 31st</span>
                     </div>
-                    <h1>Discover Affordable Health Insurance Plans Starting from just $99/Month</h1>
+                    <h1>Discover Affordable Health Insurance Plans Starting from just $99/Month sss</h1>
                     <p>Talk to a licensed agent instantly</p>
                     <div class="save-cta">
                         <a href="tel:1-555-555-5555">
